name:                hsc3-server-utils
version:             0.1.0.0
synopsis:            utilities for working with hsc3-server
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
-- copyright:           
category:            Sound
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Sound.SC3.Server.Utils
  -- other-modules:       
  build-depends:       base ==4.6.*, hsc3-server ==0.7.*, hsc3-process ==0.9.*
